fixed broken css.

--- a/vlam.css
+++ b/vlam.css
@@ -137,7 +137,7 @@ html{
   margin-bottom: 10px ;
   margin-bottom: 2px;
 }
-}
+
 .devspace{
   height: 3000px;
 }
@@ -147,12 +147,14 @@ html{
 #tophead{
   margin-top: 35vh;
 }
+
 #profilpic{
   display: block;
   margin-left: auto;
   margin-right: auto;
   max-height:75px;
 }
+
 .center{
   display: block;
   margin-left: auto;
@@ -168,11 +170,13 @@ html{
   border-bottom-left-radius: 2px 2px;
   height: 30px;
 }
+
 #pillbox_r{
   border-top-right-radius: 2px 2px;
   border-bottom-right-radius: 2px 2px;
   height: 30px;
 }
+
 #pillbox{
   height: 30px;
 }
@@ -184,10 +188,13 @@ a#pillbox h2,a#pillbox_l h2,a#pillbox_r h2{
   text-align: center;
 }
 
-}
+
 
 /*Format Mobile*/
 @media screen and (max-width: 768px) {
+  .table{
+    background-color: #181818;
+  }
   .card{
       padding: 10px;
       border-top:solid 1px rgba(250,250,250,0.1);
@@ -235,12 +242,9 @@ a#pillbox h2,a#pillbox_l h2,a#pillbox_r h2{
 .table{
     padding: 20px;
     border-radius:8px;
-    background: linear-gradient(
-    360deg, rgba(50, 50, 50, 0.1) 0%, rgba(100, 100, 100, 0.1) 100%);
+    background: linear-gradient(360deg, rgba(50, 50, 50, 0.1) 0%, rgba(100, 100, 100, 0.1) 100%);
     backdrop-filter: blur(4px);
     box-shadow: 0px 12px 12px #090909;
-
-
   } 
 
 
@@ -261,6 +265,7 @@ a#pillbox h2,a#pillbox_l h2,a#pillbox_r h2{
   z-index: 10;
   top: 0;
 }
+
 
 /*__classes d'index, TextesCouleurs etiquettes
 ============================================*/
